--- a/index.html
+++ b/index.html
@@ -44,5 +44,53 @@
         <!-- </ul> -->
       </div>
     </nav>
+    <p class="congs">CONGRAGULATIONS !!</p>
+    <p class="congs1">YOU HAVE WON A FREE PERFUME</p>
+    <p class="congs2">PICK ONE FROM FROM THE OPTIONS BELOW:</p>
+    <div class="prizes">
+      <div class="card" style="margin: 50px">
+        <img
+          src="style\img\perfume-won-1.jpg"
+          alt="PERFUME WON 1"
+          width="350"
+          height="300"
+        />
+        <div class="container">
+          <div class="c-content">
+            <p>L'EAU D'ISSEY</p>
+            <button style="width: 90px; height: 40px">SELECT PRIZE</button>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="margin: 50px">
+        <img
+          src="style\img\perfume-won-2.jpg"
+          alt="PERFUME WON 2"
+          width="350"
+          height="300"
+        />
+        <div class="container">
+          <div class="c-content">
+            <p>SHALIMAR PARFUM</p>
+            <button style="width: 90px; height: 40px">SELECT PRIZE</button>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="margin: 50px">
+        <img
+          src="style\img\perfume-won-3.jpg"
+          alt="PERFUME WON 3"
+          width="350"
+          height="300"
+          f
+        />
+        <div class="container">
+          <div class="c-content">
+            <p>KHAMRAH</p>
+            <button style="width: 90px; height: 40px">SELECT PRIZE</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
