worked on adding prizes to be worn and directions to obtain said prize

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fragrant</title>
-    <link rel="stylesheet" href="style/index.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
     <nav>
@@ -50,7 +50,7 @@
     <div class="prizes">
       <div class="card" style="margin: 50px">
         <img
-          src="style\img\perfume-won-1.jpg"
+          src="img\perfume-won-1.jpg"
           alt="PERFUME WON 1"
           width="350"
           height="300"
@@ -64,7 +64,7 @@
       </div>
       <div class="card" style="margin: 50px">
         <img
-          src="style\img\perfume-won-2.jpg"
+          src="img\perfume-won-2.jpg"
           alt="PERFUME WON 2"
           width="350"
           height="300"
@@ -78,7 +78,7 @@
       </div>
       <div class="card" style="margin: 50px">
         <img
-          src="style\img\perfume-won-3.jpg"
+          src="img\perfume-won-3.jpg"
           alt="PERFUME WON 3"
           width="350"
           height="300"
